<resources>
    <string name="app_name">JKT48App</string>
    <string name="jkt48">JKT48</string>
    <string name="icon_person">icon person</string>
    <string name="lihat_profile"><![CDATA[Lihat Profile ->]]></string>
    <string name="gen">Gen %s</string>
    <string name="height">%scm</string>
    <string name="photo_member">photo member</string>
    <string name="back_from_member_profile_details">back from member profile details</string>
    <string name="member_jkt48">Member JKT48</string>
    <string name="nama">Nama</string>
    <string name="golongan_darah">Golongan Darah</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="gen_title">Gen</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="back_from_my_profile">back from my profile</string>
    <string name="my_profile">My Profile</string>
    <string name="my_logo">My logo</string>
    <string name="muhammad_rafli_silehu">Muhammad Rafli Silehu</string>
    <string name="raflisilehu20_gmail_com">raflisilehu20@gmail.com</string>
    <string name="github_zakoraa">Github : zakoraa</string>
    <string name="from_zakora">from Zakora</string>
</resources>