<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.MemberProfileDetailsActivity">

        <LinearLayout
            android:id="@+id/ly_appbar_member_detail"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:background="@color/primaryColor"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_margin="15dp"
                android:contentDescription="@string/back_from_member_profile_details"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_jkt48"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppinssemibold"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_detail_photo_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ly_appbar_member_detail"
            android:layout_marginTop="20dp"
            >
            <ImageView
                android:id="@+id/iv_profile_picture_detail"
                android:layout_width="200dp"
                android:layout_height="250dp"
                tools:src="@tools:sample/avatars"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/photo_member"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@id/cv_detail_photo_member"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/tv_name_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Flora Shafiqa Riyadi"
            android:textSize="16sp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@id/cv_detail_photo_member"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_name_detail"/>

        <View
            android:id="@+id/v_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_name_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tv_gen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gen_title"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@id/v_1"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/tv_gen_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Gen 8"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinssemibold"
            android:paddingHorizontal="25dp"
            android:background="@drawable/border_radius_5"
            android:backgroundTint="@color/primaryColor"

            android:textSize="16sp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_gen_title"/>

        <View
            android:id="@+id/v_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_gen_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tv_date_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_lahir"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@id/v_2"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/tv_date_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="4 April 2005"
            android:textSize="16sp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_date_of_birth"/>

        <View
            android:id="@+id/v_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_date_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tv_blood_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/golongan_darah"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@id/v_3"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/tv_blood_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="B"
            android:textSize="16sp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_blood_group"/>

        <View
            android:id="@+id/v_4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_blood_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tinggi_badan"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toBottomOf="@id/v_4"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/tv_height_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="160cm"
            android:textSize="16sp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_height"/>

        <View
            android:id="@+id/v_5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />





    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
